adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto temporibus ex recusandae ipsam repellat quae ad ratione laborum tenetur possimus, ducimus qui, deleniti sapiente aspernatur, iure eaque esse quia praesentium!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis architecto, similique quia, quam minima dolorem harum cumque pariatur, sapiente fugit commodi quisquam voluptate doloribus tempore iusto asperiores minus obcaecati repellat?</p>
 </body>
 </html>
